Added polish language baseline test

--- a/experiments/wav2vec_baseline.ipynb
+++ b/experiments/wav2vec_baseline.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "id": "ccf5af3c-b5c8-4594-bbb2-0de8543981a8",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,44 @@
     "import glob\n",
     "import os\n",
     "import librosa\n",
-    "import torchaudio"
+    "import torchaudio\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c638da2-a156-4a85-937d-4a0d44d3d55c",
+   "metadata": {},
+   "source": [
+    "# Load model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a4c8cbde-d99d-47c8-b4c4-c3197a3d08a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of Wav2Vec2ForCTC were not initialized from the model checkpoint at facebook/wav2vec2-base-960h and are newly initialized: ['wav2vec2.masked_spec_embed']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Wav2Vec2ForCTC.from_pretrained(\"facebook/wav2vec2-base-960h\")\n",
+    "processor = Wav2Vec2Processor.from_pretrained(\"facebook/wav2vec2-base-960h\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "334a62c9-3e68-4e21-aa1f-bba05fa59a62",
+   "metadata": {},
+   "source": [
+    "# English"
    ]
   },
   {
@@ -30,12 +67,12 @@
    "id": "2653bebb-d57a-4073-8bd9-9e3c39813e6d",
    "metadata": {},
    "source": [
-    "# Load data"
+    "## Load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "71c5aa64-1d30-48df-b4cc-57048f77ab8c",
    "metadata": {},
    "outputs": [],
@@ -78,175 +115,144 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66c28a91-111a-4997-a23d-5ed4c733722d",
+   "id": "85250ff3-1d69-437e-ae43-27f79ff57819",
    "metadata": {},
    "source": [
-    "# Load model"
+    "## Evaluate base performance (W.E.R)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "ee9f4235-be04-47fe-9edb-4344869a467e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████| 1.60k/1.60k [00:00<00:00, 641kB/s]\n",
-      "Downloading: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████| 378M/378M [00:15<00:00, 24.9MB/s]\n",
-      "Some weights of Wav2Vec2ForCTC were not initialized from the model checkpoint at facebook/wav2vec2-base-960h and are newly initialized: ['wav2vec2.masked_spec_embed']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Downloading: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████| 159/159 [00:00<00:00, 65.5kB/s]\n",
-      "Downloading: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████| 163/163 [00:00<00:00, 67.7kB/s]\n",
-      "Downloading: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████| 291/291 [00:00<00:00, 115kB/s]\n",
-      "Downloading: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████| 85.0/85.0 [00:00<00:00, 44.7kB/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = Wav2Vec2ForCTC.from_pretrained(\"facebook/wav2vec2-base-960h\")\n",
-    "processor = Wav2Vec2Processor.from_pretrained(\"facebook/wav2vec2-base-960h\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "id": "b037da6a-77b3-42d8-bb7c-135eccf5bbfe",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['61-70970-0000',\n",
-       " '61-70970-0001',\n",
-       " '61-70970-0002',\n",
-       " '61-70970-0003',\n",
-       " '61-70970-0004',\n",
-       " '61-70970-0005',\n",
-       " '61-70970-0006',\n",
-       " '61-70970-0007',\n",
-       " '61-70970-0008',\n",
-       " '61-70970-0009']"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wer: 0.021323529411764706\n",
+      "CPU times: user 15.6 s, sys: 2.51 s, total: 18.1 s\n",
+      "Wall time: 3.21 s\n"
+     ]
     }
    ],
    "source": [
-    "list(transcripts.keys())[:10]"
+    "%%time\n",
+    "wer_scores = []\n",
+    "\n",
+    "for key in list(transcripts.keys())[:10]:    \n",
+    "    input_values = processor(audio[key], return_tensors=\"pt\", sampling_rate=16000)[\"input_values\"]\n",
+    "    logits = model(input_values)[\"logits\"]\n",
+    "    \n",
+    "    predicted_ids = torch.argmax(logits, dim=-1)\n",
+    "    transcription = processor.decode(predicted_ids[0])\n",
+    "    wer_scores.append(wer([transcription], [transcripts[key]]))\n",
+    "    \n",
+    "print(f\"wer: {np.average(wer_scores)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8473064e-b5f4-4162-b37a-bee80cd92cad",
+   "metadata": {},
+   "source": [
+    "# Polish"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "472a172f-2808-4523-8b14-5898d06315da",
+   "metadata": {},
+   "source": [
+    "## Load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "cb5e2ce2-c214-4741-8be5-125571408f2f",
+   "execution_count": 33,
+   "id": "7b4c7b16-9841-4b93-862d-73d5b5bae0b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_values = processor(audio[\"61-70970-0000\"], return_tensors=\"pt\", sampling_rate=16000)[\"input_values\"]"
+    "def load_polish_transcripts(split=\"test\", base_path=\"\"):\n",
+    "    transcripts={}\n",
+    "    \n",
+    "    with open(f\"{base_path}/transcripts.txt\", \"r\") as f:\n",
+    "        for line in f.readlines():\n",
+    "            tokens = line.split(\"\\n\")[0].split(\"\\t\")\n",
+    "            transcripts[tokens[0]] = \" \".join(tokens[1:])\n",
+    "\n",
+    "    return transcripts\n",
+    "\n",
+    "\n",
+    "def load_polish_audio(split=\"test\", path=\"\"):\n",
+    "    speech, sr = torchaudio.load(path)\n",
+    "    speech = speech.squeeze()\n",
+    "    resampler = torchaudio.transforms.Resample(sr, 16000)\n",
+    "    speech = resampler(speech)\n",
+    "    \n",
+    "    return speech\n",
+    "    \n",
+    "    \n",
+    "def load_polish_dataset(split=\"test\"):\n",
+    "    BASE_PATH = f\"../data/polish/mls_polish_opus/{split.lower()}\"\n",
+    "    \n",
+    "    transcripts = load_polish_transcripts(split, BASE_PATH)\n",
+    "    audio = {}\n",
+    "    \n",
+    "    for key, value in transcripts.items():\n",
+    "        audio_path = f\"{BASE_PATH}/audio/{'/'.join(key.split('_')[:2])}/{key}.opus\"\n",
+    "        audio[key] = load_polish_audio(split, audio_path)\n",
+    "        \n",
+    "    return transcripts, audio\n",
+    "\n",
+    "transcripts, audio = load_polish_dataset()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "2f0e20d2-ded8-47f3-921b-44004df81bf6",
+   "cell_type": "markdown",
+   "id": "87f6b5c8-1616-4530-bd08-ca7922971b98",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "logits = model(input_values)[\"logits\"]\n"
+    "## Evaluate base performance (W.E.R)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "154925f6-7c10-492d-bf7e-327b1f47e545",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_ids = torch.argmax(logits, dim=-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "90cb7a63-0599-4a61-9a54-bd4caa494fa5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transcription = processor.decode(predicted_ids[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "f5c6fde3-97c7-43bb-aa92-7fda9bea187e",
+   "execution_count": 34,
+   "id": "0555e090-e699-4803-ae17-85d49aba0309",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"YOUNG FITZOOTH HAD BEEN COMMANDED TO HIS MOTHER'S CHAMBER SO SOON AS HE HAD COME OUT FROM HIS CONVERSE WITH THE SQUIRE\""
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wer: 1.307249343009336\n",
+      "CPU times: user 1min 8s, sys: 11.1 s, total: 1min 19s\n",
+      "Wall time: 17.1 s\n"
+     ]
     }
    ],
    "source": [
-    "transcription"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "4bd67bd7-8ea4-46e1-be66-465dd6ecfb79",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"YOUNG FITZOOTH HAD BEEN COMMANDED TO HIS MOTHER'S CHAMBER SO SOON AS HE HAD COME OUT FROM HIS CONVERSE WITH THE SQUIRE\""
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "transcripts[\"61-70970-0000\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "849b61a0-3418-444d-9f69-a16d646a9a64",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wer([transcription], [transcripts[\"61-70970-0000\"]])"
+    "%%time\n",
+    "wer_scores = []\n",
+    "\n",
+    "for key in list(transcripts.keys())[:10]:    \n",
+    "    input_values = processor(audio[key], return_tensors=\"pt\", sampling_rate=16000)[\"input_values\"]\n",
+    "    logits = model(input_values)[\"logits\"]\n",
+    "    \n",
+    "    predicted_ids = torch.argmax(logits, dim=-1)\n",
+    "    transcription = processor.decode(predicted_ids[0])\n",
+    "    wer_scores.append(wer([transcription], [transcripts[key]]))\n",
+    "    \n",
+    "print(f\"wer: {np.average(wer_scores)}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "129aeea1-92ca-42aa-ad40-2ab62fdadc9f",
+   "id": "310f802d-3ff1-4f6b-a1df-dc9895665f5b",
    "metadata": {},
    "outputs": [],
    "source": []
