--- a/experiments/wav2vec_baseline.ipynb
+++ b/experiments/wav2vec_baseline.ipynb
@@ -10,12 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "ccf5af3c-b5c8-4594-bbb2-0de8543981a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tusharpal/Documents/Leiden/Audio Processing/API Project/venv/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import Wav2Vec2ForCTC, Wav2Vec2Processor\n",
+    "from datasets import load_dataset\n",
     "from jiwer import wer\n",
     "\n",
     "import torch\n",
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "a4c8cbde-d99d-47c8-b4c4-c3197a3d08a8",
    "metadata": {},
    "outputs": [
@@ -44,14 +54,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of Wav2Vec2ForCTC were not initialized from the model checkpoint at facebook/wav2vec2-base-960h and are newly initialized: ['wav2vec2.masked_spec_embed']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+      "/Users/tusharpal/Documents/Leiden/Audio Processing/API Project/venv/lib/python3.9/site-packages/transformers/configuration_utils.py:369: UserWarning: Passing `gradient_checkpointing` to a config initialization is deprecated and will be removed in v5 Transformers. Using `model.gradient_checkpointing_enable()` instead, or if you are using the `Trainer` API, pass `gradient_checkpointing=True` in your `TrainingArguments`.\n",
+      "  warnings.warn(\n",
+      "Some weights of the model checkpoint at facebook/wav2vec2-base were not used when initializing Wav2Vec2ForCTC: ['project_q.bias', 'project_hid.bias', 'project_hid.weight', 'quantizer.weight_proj.weight', 'quantizer.codevectors', 'project_q.weight', 'quantizer.weight_proj.bias']\n",
+      "- This IS expected if you are initializing Wav2Vec2ForCTC from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing Wav2Vec2ForCTC from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of Wav2Vec2ForCTC were not initialized from the model checkpoint at facebook/wav2vec2-base and are newly initialized: ['lm_head.bias', 'lm_head.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "Downloading: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 159/159 [00:00<00:00, 25.2kB/s]\n",
+      "Downloading: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 163/163 [00:00<00:00, 84.1kB/s]\n",
+      "Downloading: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 291/291 [00:00<00:00, 130kB/s]\n",
+      "Downloading: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 85.0/85.0 [00:00<00:00, 32.2kB/s]\n"
      ]
     }
    ],
    "source": [
-    "model = Wav2Vec2ForCTC.from_pretrained(\"facebook/wav2vec2-base-960h\")\n",
-    "processor = Wav2Vec2Processor.from_pretrained(\"facebook/wav2vec2-base-960h\")"
+    "model = Wav2Vec2ForCTC.from_pretrained(\"facebook/wav2vec2-base\")\n",
+    "processor = Wav2Vec2Processor.from_pretrained(\"facebook/wav2vec2-base\")"
    ]
   },
   {
@@ -72,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "71c5aa64-1d30-48df-b4cc-57048f77ab8c",
    "metadata": {},
    "outputs": [],
@@ -82,7 +101,7 @@
     "    \n",
     "    for filepath in glob.glob(f\"{base_path}/*/*/*.txt\", recursive=True):\n",
     "        with open(filepath, \"r\") as f:\n",
-    "            for line in f.readlines():\n",
+    "            for line in f.readlines()[:10]:\n",
     "                tokens = line.split(\"\\n\")[0].split(\" \")\n",
     "                transcripts[tokens[0]] = \" \".join(tokens[1:])\n",
     "\n",
@@ -104,7 +123,7 @@
     "    transcripts = load_transcripts(config, split, BASE_PATH)\n",
     "    audio = {}\n",
     "    \n",
-    "    for key, value in transcripts.items():\n",
+    "    for key in list(transcripts.keys())[:10]:\n",
     "        audio_path = f\"{BASE_PATH}/{'/'.join(key.split('-')[:2])}/{key}.flac\"\n",
     "        audio[key] = load_audio(config, split, audio_path)\n",
     "        \n",
@@ -123,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "b037da6a-77b3-42d8-bb7c-135eccf5bbfe",
    "metadata": {},
    "outputs": [
@@ -131,9 +150,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wer: 0.021323529411764706\n",
-      "CPU times: user 15.6 s, sys: 2.51 s, total: 18.1 s\n",
-      "Wall time: 3.21 s\n"
+      "wer: 11.633333333333335\n",
+      "CPU times: user 15.7 s, sys: 2.64 s, total: 18.4 s\n",
+      "Wall time: 3.35 s\n"
      ]
     }
    ],
@@ -170,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "7b4c7b16-9841-4b93-862d-73d5b5bae0b0",
    "metadata": {},
    "outputs": [],
@@ -179,7 +198,7 @@
     "    transcripts={}\n",
     "    \n",
     "    with open(f\"{base_path}/transcripts.txt\", \"r\") as f:\n",
-    "        for line in f.readlines():\n",
+    "        for line in f.readlines()[:10]:\n",
     "            tokens = line.split(\"\\n\")[0].split(\"\\t\")\n",
     "            transcripts[tokens[0]] = \" \".join(tokens[1:])\n",
     "\n",
@@ -201,7 +220,7 @@
     "    transcripts = load_polish_transcripts(split, BASE_PATH)\n",
     "    audio = {}\n",
     "    \n",
-    "    for key, value in transcripts.items():\n",
+    "    for key in list(transcripts.keys())[:10]:\n",
     "        audio_path = f\"{BASE_PATH}/audio/{'/'.join(key.split('_')[:2])}/{key}.opus\"\n",
     "        audio[key] = load_polish_audio(split, audio_path)\n",
     "        \n",
@@ -220,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "0555e090-e699-4803-ae17-85d49aba0309",
    "metadata": {},
    "outputs": [
@@ -228,9 +247,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wer: 1.307249343009336\n",
-      "CPU times: user 1min 8s, sys: 11.1 s, total: 1min 19s\n",
-      "Wall time: 17.1 s\n"
+      "wer: 29.0\n",
+      "CPU times: user 1min 5s, sys: 10.4 s, total: 1min 15s\n",
+      "Wall time: 14.8 s\n"
      ]
     }
    ],
@@ -248,14 +267,6 @@
     "    \n",
     "print(f\"wer: {np.average(wer_scores)}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "310f802d-3ff1-4f6b-a1df-dc9895665f5b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
